--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -11,15 +11,24 @@ body {
     position: relative;
   }
   
-  h1,.info {
-    color:wheat;
+  h1{
+    color:firebrick;
     text-align:center;
     font-family: 'Londrina Shadow', cursive;
   }
+  .info{
+    color:firebrick;
+    font-size:22px;
+    text-align: center;
+  }
+  
   .main{
     background:rgba(0,0,0,0.5);
     padding: 10px;
     text-align: center;
+  }
+  .main:hover{
+    color:whitesmoke;
   }
   
   li {
@@ -49,42 +58,22 @@ body {
     display:inline;
     
   }
-   @media (max-width: 500px) {
+  ol{
+    font-family: 'Londrina Shadow', cursive;
+  }
+   @media (max-width: 600px) {
     h1 {
-      font-size: 50px;
+      font-size: 10vw;
       margin-top: 20px;
       line-height: 40px;
     }
+    
     li {
-      padding: 10px;
+      padding: 5px;
       display: block;
-      font-size:45px;
+      font-size: 18px;
     }
   }
-  /*
-  header {
-    padding: 10px 16px;
-    background: #555;
-    color: #f1f1f1;
-  }
-  
-  /* Page content */
-  /*.content {
-    padding: 16px;
-  }
-  
-  /* The sticky class is added to the header with JS when it reaches its scroll position */
-  /*.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%
-  }
-  
-  /* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
-  /*.sticky + .content {
-    padding-top: 102px;
-  }
-
 
 
 
